# pavise

./: README.md  pyproject.toml  tox.ini
.github/workflows/: docs.yml  release.yml  test.yml
docs/: getting-started.rst  index.rst
docs/api-reference/: index.rst
docs/examples/: data-validation.rst
docs/user-guide/: basic-usage.rst  error-messages.rst  polars-backend.rst
src/patrol/: exceptions.py  validators.py
src/patrol/_pandas/: validation.py  validator_impl.py
src/patrol/_polars/: validation.py  validator_impl.py
src/pavise/: __init__.py  exceptions.py  pandas.py  polars.py  validators.py
src/pavise/_pandas/: validation.py  validator_impl.py
src/pavise/_polars/: validation.py  validator_impl.py
tests/test_pandas/: test_dataframe.py  test_detailed_errors.py  test_validator_detailed_errors.py  test_validators.py
tests/test_polars/: test_dataframe.py  test_detailed_errors.py  test_lazyframe.py  test_validator_detailed_errors.py  test_validators.py
