[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "pavise"
description = "DataFrame validation library using Python Protocol for structural subtyping"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "kitagry"},
]
dependencies = [
    "typing-extensions>=4.0.0",
]
dynamic = ["version"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true

[tool.hatch.build.hooks.version]
path = "src/pavise/__init__.py"
template = '''
"""Pavise: DataFrame validation library using Python Protocol for structural subtyping."""

__version__ = "{version}"
__all__ = []
'''

[project.optional-dependencies]
pandas = [
    "pandas>=1.3.0",
]
polars = [
    "polars>=0.15.0",
]
all = [
    "pandas>=1.3.0",
    "polars>=0.15.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyrefly>=0.1.0",
    "ruff>=0.1.0",
    "tox>=4.0.0",
    "pandas>=1.3.0",
    "polars>=0.15.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pavise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyrefly]
python_version = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Test files need to test both Union[X, Y] and X | Y syntax
"tests/test_pandas/test_dataframe.py" = ["UP007", "UP045"]
"tests/test_polars/test_dataframe.py" = ["UP007", "UP045"]
